# Booster3v3_MARL

./: .gitignore  README.md  check_actor_parity.py  export_light_actor.py  pyproject.toml  requirements-core.txt  requirements-train.txt
configs/: env.yaml  mappo.yaml  reward.yaml
deployment/: export_actor_json.py  export_actor_torchscript.py
docs/: OBSERVATION_ACTION_SPEC.md  RULES_ASSUMPTIONS.md  VALIDATION.md
on-policy/onpolicy/algorithms/r_mappo/: r_mappo.py
on-policy/onpolicy/algorithms/r_mappo/algorithm/: r_actor_critic.py
on-policy/onpolicy/runner/shared/: smac_runner.py
on-policy/onpolicy/utils/: shared_buffer.py
robocup3v3/: __init__.py  actions.py  config.py  env.py  league.py  learned_opponent.py  observations.py  opponents.py  physics.py  rendering.py  rewards.py  rules.py  spaces.py  types.py
robocup3v3/adapters/: __init__.py  booster.py  gymnasium_env.py  onpolicy.py  pettingzoo_env.py  play_context.py
tests/: test_interfaces.py  test_league.py  test_rewards_curriculum.py  test_rules.py
training/: analyze_rewards.py  analyze_sim2real_gap.py  evaluate_actor_vs_trees.py  evaluate_scripted.py  pretrain_bc.py  record_match.py  run_adaptive_dagger.sh  run_dagger_iterations.sh  run_league_swiss.py  run_rl_learnability_stage1.sh  smoke_env.py  train_mappo.py  validate_teachers.py
